<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/cartoon2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/default_option_border_bg"
        android:backgroundTint="#5E513B"
        android:gravity="center"
        android:text="░▒▓ QuizApp ▓▒░"
        android:textColor="#F8F6F7"
        android:textSize="39dp"

        android:textStyle="bold" />


    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="#710411"
        app:cardCornerRadius="11dp"
        app:cardElevation="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#CDD3DD"
            android:textSize="30sp"
            android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/please_enter_your_name"
                android:textColor="#A3B0C3"
                android:textSize="16sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textColor="#363A43"
                    android:textColorHint="#47494C"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:background="#833E74"
                android:text="@string/start"
                android:textColor="#FAF9F9"
                android:textSize="18sp">
            </androidx.appcompat.widget.AppCompatButton>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

  </LinearLayout>