<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/redstrip"
    android:fillViewport="true"
    tools:context=".QuizQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"

        android:padding="14dp">

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#C0BCC6"
            android:gravity="center"
            android:textColor="#070707"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="WHAT IS THE NAME OF THE MARVEL SUPERHERO SHOWN IN THE PICTURE? " />


        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="318dp"
            android:layout_height="174dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ironman9" />

        <LinearLayout
            android:id="@+id/progress_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="30dp"
                android:progress="0"

                />

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textColorHint="#000000"
                android:textSize="14sp"
                tools:text="0/10"

                />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_option_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="13dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            tools:text="@string/iron_man" />

        <TextView
            android:id="@+id/tv_option_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/hawkeye"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_option_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/drax"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_option_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/captain_america"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="375dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:text="SUBMIT"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>